# FFmpegTrain

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  TCKFFmpeg.cpp  macro.h  safe_queue.h
common/: build.gradle
common/src/main/: AndroidManifest.xml
ffmpeglib/: JavaCallHelper.cpp  JavaCallHelper.h  TCKFFmpeg.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
jnithread/: build.gradle
jnithread/src/main/: AndroidManifest.xml
jnithread/src/main/cpp/: AndroidLog.h  CMakeLists.txt  JavaListener.cpp  JavaListener.h  jnithread-lib.cpp
jnithread/src/main/module/: AndroidManifest.xml
musicplayer/: CMakeLists.txt  build.gradle
musicplayer/src/main/: AndroidManifest.xml
musicplayer/src/main/cpp/: AndroidLog.h  TAudio.cpp  TAudio.h  TCallJava.cpp  TCallJava.h  TFFmpeg.cpp  TFFmpeg.h  music-lib.cpp
musicplayer/src/main/java/com/tck/musicplayer/: AudioPlayer.java  AudioPlayerActivity.java
musicplayer/src/main/module/: AndroidManifest.xml
musicplayer/src/main/res/layout/: activity_audio_play.xml
myplayer/: .gitignore  CMakeLists.txt  build.gradle
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: CallJava.cpp  CallJava.h  TCKAudio.cpp  TCKAudio.h  TCKFFmpeg.cpp  TCKFFmpeg.h  TCKPlayStatus.cpp  TCKPlayStatus.h  TCKQueue.cpp  TCKQueue.h  TCKVideo.cpp  TCKVideo.h  videoplayer-lib.cpp
myplayer/src/main/module/: AndroidManifest.xml
openslaudio/: CMakeLists.txt  build.gradle
openslaudio/src/main/: AndroidManifest.xml
(+30 files in other folders)
